Fix for bug #18859: [DOGFOOD] URL bar messed upReplaced all calls to SelectAllText() with calls tonsIEditor::SelectAll().r=jfrancis@netscape.com(kin is the author of these changes - being checked in by reviewer)